Trabajo final terminado

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <header>
     <nav class="navbar navbar-expand navbar-dark bg-dark" aria-label="Second navbar example">
       <div class="container-fluid">
-        <a class="navbar-brand" href="14365 RamosFelipe.html">RF Emergencias</a>
+        <a class="navbar-brand" href="14365 RamosFelipe.html">BU Emergencias</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample02" aria-controls="navbarsExample02" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -48,7 +48,7 @@
                   <p>
                     ¿Tu seguro demora mas de 2 horas para enviarte una grúa?
                     Con nuestro localizador virtual podras ver cuanto demoraremos
-                    y el costo del traslado.
+                    y el costo del traslado!.
                   </p>
                     </article>
                 </section>
@@ -143,7 +143,7 @@
 		<li><a href="contactar.html">Twitter</a></li>
 	</ul>
   <div class="conteiner" id="footer__p">
-              </svg> Copyright &#169; 2021 Ramos Felipe, proyecto final Coderhouse</p>
+              </svg> Copyright &#169; 2023 Blas Uria, proyecto final Coderhouse</p>
   </div>
   </footer>
     <script src="js/jquery.js"></script>
